[package]
edition = "2018"
name = "cathlamet"
version = "0.1.0"
authors = ["Hans-Martin Will <hwill@acm.org>"]
description = "Distributed systems substrate"
documentation = "https://docs.rs/cathlamet/"
repository= "https://github.com/hmwill/cathlamet"
license = "MIT"
build = "build.rs" # LALRPOP preprocessing

[dependencies]
async-std = { version = "*", features = ["unstable"] }
clap = "*"
error-chain = "*"
lalrpop-util = "*"
libc = "*"
memmap = "*"
serde = "*"
serde_derive = "*"
uuid = { version = "*", features = ["serde", "v4"] }

[build-dependencies]
lalrpop = { version = "*", features = ["lexer"] }
